--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,102 @@
-.App {
+#editorWrap{
+  max-width: 600px;
+  margin: 1.25rem auto;
+
+}
+.converter {
+  width: 100px;
   text-align: center;
+  font-size: 35px;
+  margin: auto;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.bar {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #4aa3a3;
+  padding: 10px;
+  border: 1px solid #1d2f2f;
+  box-shadow: 1px 1px 10px 2px #3a5f5f;
+  font-family: Russo One;
+  font-size: 1rem;
+  color: black;
+  height: 40px;
+  display: flex;
+  font-weight: bolder;
+}
+.icon1{
+  float: left
+}
+.icon2{
+  display: flex;
+  justify-content: flex-end;
+  float: right;
+}
+#editorWrap .bar{
+  width: 99%
 }
 
-.App-link {
-  color: #61dafb;
+ textarea{
+    width: 99%;
+    min-height: 200px;
+    margin-top: 20px;
+    resize: vertical;
+    outline: none;
+    padding-left: 5px;
+    padding-top: 5px;
+    font-size: 0.875rem;
+    background-color: #c0d8d8;
+}
+button{
+  border: none;
+  background-color: transparent;
+  border: none;
+}
+button:hover{
+  color: greenyellow
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.bar .arrow{
+  margin-left: auto;
 }
+.arrow{
+  margin-left: 20px;
+}
+.textarea-container {
+  position: relative;
+}
+
+#previewWrap{
+   max-width: 800px;
+   min-height: 200px;
+   margin: 1.25rem auto;
+   overflow: break-word;
+   border: 1px solid black;
+   background-color: #c0d8d8;
+}
+
+.previewer{
+  padding: 20px;
+  max-height: fit-content;
+  overflow-wrap: break-word;
+}
+.previewer h1, h2{
+  border-bottom: 2px solid black;
+  padding-bottom: 30px;
+}
+img{
+  max-width: 95%;
+}
+pre {
+  background-color: white;
+}
+.previewer code{
+  background-color: white;
+}
+
+
+
+html{
+    background-color: #4aa3a3;
+}
+
